# concordo

./: CMakeLists.txt  Doxyfile  README.md  compile_commands.json  script.txt  script2.txt
data/: servidores.txt  usuarios.txt
docs/html/: CanalTexto_8h_source.html  CanalVoz_8h_source.html  Canal_8h_source.html  Mensagem_8h_source.html  Servidor_8h_source.html  Sistema_8h_source.html  Usuario_8h_source.html  annotated.html  classCanal-members.html  classCanal.html  classCanalTexto-members.html  classCanalTexto.html  classCanalVoz-members.html  classCanalVoz.html  classMensagem-members.html  classMensagem.html  classServidor-members.html  classServidor.html  classSistema-members.html  classSistema.html  classUsuario-members.html  classUsuario.html  classes.html  dir_051bfca0d6f4e92417dab1531a199030.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6974064bec986529c9a68c7c75e571af.html  dir_713acbf0246a22292b4b09ce6f71bf4b.html  dir_9c76c57719432853f9da2cc80aef6323.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f832e65f699b83436d186dae4d69d023.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  md_README.html  menudata.js  (+1 more)
docs/latex/: CanalTexto_8h_source.tex  CanalVoz_8h_source.tex  Canal_8h_source.tex  Mensagem_8h_source.tex  (+15 more)
include/: Canal.h  CanalTexto.h  CanalVoz.h  Mensagem.h  Servidor.h  Sistema.h  Usuario.h
src/: Canal.cpp  CanalTexto.cpp  CanalVoz.cpp  Mensagem.cpp  Servidor.cpp  Sistema.cpp  Usuario.cpp  main.cpp
(+36 files in other folders)
